first-project/infra/k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deply
spec:
  replicas: 1
  selector: # look at different pods and monitor the labels defined at matchLabels
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments # pod label
    spec:
      containers:
        - name: comments
          image: vitor/comments
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 9000
      targetPort: 9000
