first-project/infra/k8s/event-bus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deply
spec:
  replicas: 1
  selector: # look at different pods and monitor the labels defined at matchLabels
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus # pod label
    spec:
      containers:
        - name: event-bus
          image: vitor/event-bus
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP # default service type
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 7000
      targetPort: 7000
