first-project/infra/k8s/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deply
spec:
  replicas: 1
  selector: # look at different pods and monitor the labels defined at matchLabels
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts # pod label
    spec:
      containers:
        - name: posts
          image: vitor/posts
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 8000
      targetPort: 8000
